Added nav with logo and button

--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
 	<body>
 
 		<!--- Navigation -->
-		<nav id="nav">
-			<ul>
-  				<li><a href="#">null</a></li>
-  				<li><a href="#">null</a></li>
-				<li><a href="#">null</a></li>
-				<li><a href="#">null</a></li>
-			</ul>
-		</nav>
+		<div id="nav_background"></div>
+		<div id="nav"></div>
+		<div id="logo">Logotype</div>
+			<button id="nav_lets_go">Lets go!</button>
 		
 		<!--- Header -->
-		
+		<div class="header">All you need is a product</div>
 
 		<!--- Scripts -->
 	<script type="text/javascript" src="js/jquery.js"></script>
