--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
 		<div id="nav_background"></div>
 		<div id="nav"></div>
 		<div id="logo">Logotype</div>
-			<button id="nav_lets_go">Lets go!</button>
+			<button id="nav_lets_go">Let's go!</button>
 		
 		<!--- Header -->
-		<div class="header">All you need is a product</div>
+		<div class="header">
+
+			<p>All you need, <br>
+		 	is a product.</p></div>
 
 		<!--- Scripts -->
 	<script type="text/javascript" src="js/jquery.js"></script>
