Adding paragraph "Want an easy way to set up a store...?"

--- a/index.html
+++ b/index.html
@@ -17,17 +17,26 @@
 	<body>
 
 		<!--- Navigation -->
-		<div id="nav_background"></div>
 		<div id="nav"></div>
 		<div id="logo">Logotype</div>
 			<button id="nav_lets_go">Let's go!</button>
 		
 		<!--- Header -->
 		<div class="header">
+			<div id="header_textbox">
+				<p> All you need, <br>
+		 		is a product. </p>
+			</div>
+		</div>
 
-			<p>All you need, <br>
-		 	is a product.</p></div>
+		 <div id="textbox_top">	
+		 	<h1><span class="blue_text">Designed and functioning store</span> <span class="grey_text">for less than $30</span></h1>
+		 </div>
+		 <p style="text-align: center"><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
+		 	<span class="blue_text">How 'bout we do it? <br>
+		 		  Plus marketing.</span>
 
+		 </p>
 		<!--- Scripts -->
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
