Header text font size and position

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 	<body>
 
 		<!--- Navigation -->
-		<div id="nav"></div>
-		<div id="logo">Logotype</div>
-			<button id="nav_lets_go">Let's go!</button>
+		<div id="nav">
+			<div id="new_logo">Hej</div>
+			<button id="nav_button">Let's go!</button>
+		</div>
+		
 		
 		<!--- Header -->
 		<div class="header">
 			<div id="header_textbox">
-				<p> All you need, <br>
+				<p id="header_textbox_text"> All you need, <br>
 		 		is a product. </p>
 			</div>
 		</div>
