Added and centered iMac img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!--- Navigation -->
 		<div id="nav">
-			<div id="new_logo">Hej</div>
+			<div id="new_logo">Logotype</div>
 			<button id="nav_button">Let's go!</button>
 		</div>
 		
@@ -31,14 +31,20 @@
 			</div>
 		</div>
 
-		 <div id="textbox_top">	
+		 <section id="textbox_top">	
 		 	<h1><span class="blue_text">Designed and functioning store</span> <span class="grey_text">for less than $30</span></h1>
-		 </div>
+		 </section>
+		 <section class="section">
 		 <p style="text-align: center"><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
 		 	<span class="blue_text">How 'bout we do it? <br>
 		 		  Plus marketing.</span>
-
 		 </p>
+		 </section>
+		 <section class="section_small">
+		 	<img src="http://s21.postimg.org/k3jk143lj/imac_cartoon.png">
+		 </section>
+
+
 		<!--- Scripts -->
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
