--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<!--- CSS FILES -->
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
 	</head>
