--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		
 		<!--- jQuery -->
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
