Github connection does work. Changed back to normal copy

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		 <section class="section">
 		 <p style="text-align: center"><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
 		 	<span class="blue_text">How 'bout we do it? <br>
-		 		  Plus marketing!!!</span>
+		 		  Plus marketing.</span>
 		 </p>
 		 </section>
 		 <section class="section_small">
