--- a/index.html
+++ b/index.html
@@ -44,6 +44,50 @@
 		 <section class="section_small">
 		 	<img src="http://s21.postimg.org/k3jk143lj/imac_cartoon.png">
 		 </section>
+		 <section>
+		 	<div id="box_website" class="box">
+		 		<div id="black_opacity_filter" class="opacity_filter">
+		 			<div class="box_header"><h3>Responsive website</h3></div>
+		 			<div class="box_textbox">
+		 				<ul>
+		 					<li>Bullet 1</li>
+		 					<li>Bullet 2</li>
+		 					<li>Bullet 3</li>
+		 				</ul>
+		 			</div>
+		 		</div>
+		 	</div>
+		 	<div id="box_facebook" class="box">
+		 		<div id="blue_opacity_filter" class="opacity_filter">
+		 			<div class="box_header"><h3>Facebook page</h3></div>
+		 			<div class="box_textbox">
+		 				<ul>
+		 					<li>Bullet 1</li>
+		 					<li>Bullet 2</li>
+		 					<li>Bullet 3</li>
+		 				</ul>
+		 			</div>
+		 		</div>
+		 	</div>
+		 	<div id="box_facebook_ad" class="box">
+		 		<div id="white_opacity_filter" class="opacity_filter">
+		 			<div class="box_header"><h3>Facebook ad</h3></div>
+		 			<div class="box_textbox">
+		 				<ul>
+		 					<li>Bullet 1</li>
+		 					<li>Bullet 2</li>
+		 					<li>Bullet 3</li>
+		 				</ul>
+		 			</div>
+		 		</div>
+		 	</div>
+		 </section>
+		 <section class="section">
+		 <p style="text-align: center"><span class="grey_text">So how much is this gonna cost you...? </span><br><br>
+		 	<span class="blue_text">Well you could hire a dev, <br>
+		 		  and pay $3000, or...</span>
+		 </p>
+		 </section>
 
 
 		<!--- Scripts -->
