Added line breaks to header text

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 		<!--- Header -->
 		<div class="header">
 			<div id="header_textbox">
-				<p id="header_textbox_text"> All you need, <br>
-		 		is a product. </p>
+				<p id="header_textbox_text"> 
+					All<br> 
+					you<br> 
+					need,<br>
+					is a<br>
+					product. </p>
 			</div>
 		</div>
 
