--- a/index.html
+++ b/index.html
@@ -45,9 +45,43 @@
 		 		  Plus marketing.</span>
 		 </p>
 		 </section>
+
+		 <section class="section">
+		 	<img class="icons" src="icons/png/design.png"><br>
+		 	<h4>Custom designed webstore</h4>
+		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 </section>
+		 <section class="section">
+		 	<img class="icons" src="icons/png/responsive.png"><br>
+		 	<h4>Mobile and tablet optimized</h4>
+		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 </section>
+		 <section class="section">
+		 	<img class="icons" src="icons/png/payment.png"><br>
+		 	<h4>Managed payment solution</h4>
+		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 </section>
+		 <section class="section">
+		 	<img class="icons" src="icons/png/online6.png"><br>
+		 	<h4>Free web hosting</h4>
+		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 </section>
+		 <section class="section">
+		 	<img class="icons" src="icons/png/like3.png"><br>
+		 	<h4>Custom Facebook page</h4>
+		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 </section>
+		 <section class="section">
+		 	<img class="icons" src="icons/png/geo.png"><br>
+		 	<h4>Laser focused marketing</h4>
+		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 </section>
+
+
 		 <section class="section_small">
 		 	<img src="http://s21.postimg.org/k3jk143lj/imac_cartoon.png">
 		 </section>
+
 		 <section>
 		 	<div id="box_website" class="box">
 		 		<div id="black_opacity_filter" class="opacity_filter">
