Adding icons + website examples

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!--- Navigation -->
 		<div id="nav">
 			<div id="new_logo">Logotype</div>
-			<button id="nav_button">Let's go!</button>
+			<button class="button" id="nav_button">Let's go!</button>
 		</div>
 		
 		
@@ -36,52 +36,74 @@
 			</div>
 		</div>
 
+		<!--- Body START -->
+
 		 <section id="textbox_top">	
 		 	<h1><span class="blue_text">Designed and functioning store</span> <span class="grey_text">for less than $30</span></h1>
 		 </section>
-		 <section class="section">
-		 <p style="text-align: center"><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
-		 	<span class="blue_text">How 'bout we do it? <br>
+		 <section id="textbox_top_description" class="section">
+		 <p style=><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
+		 	<span class="blue_text">How 'bout we do it for you? <br>
 		 		  Plus marketing.</span>
 		 </p>
 		 </section>
+		 
+		 <section class="section">
+		 	<div class="website_thumbnail">
+		 		<div id="website1">
+		 			<div class="black_opacity"></div>
+		 		</div></div>
+		 	<div class="website_thumbnail">
+		 		<div id="website2">
+		 			<div class="black_opacity"></div>
+		 		</div></div>
+		 	<div class="website_thumbnail">
+		 		<div id="website3">
+		 			<div class="black_opacity"></div>
+		 		</div></div>
+		 </section>
+		 
+		 
 
+		 <!--- Icon boxes -->
 		 <section class="section">
 		 	<img class="icons" src="icons/png/design.png"><br>
 		 	<h4>Custom designed webstore</h4>
-		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 	<p>We will set up and design a custom webstore with the color scheme of your choice.</p>	
 		 </section>
 		 <section class="section">
 		 	<img class="icons" src="icons/png/responsive.png"><br>
 		 	<h4>Mobile and tablet optimized</h4>
-		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 	<p>The store will be optimized for computer,<br> tablet and smartphone.</p>	
 		 </section>
 		 <section class="section">
 		 	<img class="icons" src="icons/png/payment.png"><br>
 		 	<h4>Managed payment solution</h4>
-		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 	<p>We'll deliver the store with a fully functioning shopping cart and payment solution.</p>	
 		 </section>
 		 <section class="section">
 		 	<img class="icons" src="icons/png/online6.png"><br>
 		 	<h4>Free web hosting</h4>
-		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 	<p>You don't have to worry about the hosting.<br> We'll take care of it for you.</p>	
 		 </section>
 		 <section class="section">
 		 	<img class="icons" src="icons/png/like3.png"><br>
 		 	<h4>Custom Facebook page</h4>
-		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 	<p>We will design a custom Facebook page<br> including cover photo and profile picture.</p>	
 		 </section>
 		 <section class="section">
-		 	<img class="icons" src="icons/png/geo.png"><br>
+		 	<img id="icon_geo" src="icons/png/geo.png"><br>
 		 	<h4>Laser focused marketing</h4>
-		 	<p>We will set up and design a custom Facebook page including cover photo and profile picture.</p>	
+		 	<p>We will craft a compelling Facebook ad<br> to drive visitors to your site.</p>	
 		 </section>
 
 
+		 <!--- iMac img -->
 		 <section class="section_small">
 		 	<img src="http://s21.postimg.org/k3jk143lj/imac_cartoon.png">
 		 </section>
 
+		 <!--- Info boxes -->
 		 <section>
 		 	<div id="box_website" class="box">
 		 		<div id="black_opacity_filter" class="opacity_filter">
@@ -120,13 +142,15 @@
 		 		</div>
 		 	</div>
 		 </section>
+
+		 <!--- Pricing section -->
 		 <section class="section">
 		 <p style="text-align: center"><span class="grey_text">So how much is this gonna cost you...? </span><br><br>
-		 	<span class="blue_text">Well you could hire a dev, <br>
-		 		  and pay $3000, or...</span>
-		 </p>
+		 <button class="button" id="pricing_button">Pricing</button>
 		 </section>
 
+
+		 <!--- Body END -->
 
 		<!--- Scripts -->
 	<script type="text/javascript" src="js/jquery.js"></script>
