Adding footer, styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!--- Navigation -->
 		<div id="nav">
 			<div id="new_logo">Logotype</div>
-			<button class="button" id="nav_button">Let's go!</button>
+			<button class="button green_button" id="nav_button">Let's go!</button>
 		</div>
 		
 		
@@ -43,7 +43,7 @@
 		 </section>
 		 <section id="textbox_top_description" class="section">
 		 <p style=><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
-		 	<span class="blue_text">How 'bout we do it for you? <br>
+		 	<span class="blue_text">How 'bout we do it for you instead? <br>
 		 		  Plus marketing.</span>
 		 </p>
 		 </section>
@@ -63,7 +63,12 @@
 		 		</div></div>
 		 </section>
 		 
-		 
+		 <section id="we_do_everything" class="section_full_width">
+		 	We build the site<br>
+		 	We drive the traffic<br>
+		 	We handle the hosting<br>
+		 	We... do everything for you.<br>
+		 </section>
 
 		 <!--- Icon boxes -->
 		 <section class="section">
@@ -146,7 +151,7 @@
 		 <!--- Pricing section -->
 		 <section class="section">
 		 <p style="text-align: center"><span class="grey_text">So how much is this gonna cost you...? </span><br><br>
-		 <button class="button" id="pricing_button">Pricing</button>
+		 <button class="button medium_button blue_button">Pricing</button>
 		 </section>
 
 
@@ -156,7 +161,11 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 
-	
+	<footer>
+		<a href="#">About</a>
+		<a href="#">Terms and conditions</a>
+		<a href="#">Contact</a>
+	</footer>
 </body>
 
 </html>
