Updating price tables

--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
 				</h3>
 					<div id="price_info_box">One-time charge: &emsp;&emsp;$29<br>
 					Monthly recurring cost: &emsp;$10</div>
-		 		<button class="button large_button green_button" id="buy_button">Get your store!</button><br>
+		 		<button class="button large_button green_button" id="buy_button">Get Your Store</button><br>
 		 		
 		 	</div>
 		 	<table id="table1" class="pricing_table" border="0">
@@ -80,8 +80,8 @@
 		 	</div>
 			<table id="table2" class="pricing_table">
 			  
-			  <tr><td class="icon_cell"><img class="icons_small" src="icons/png/domain1.png"></td><td class="text_cell">Custom domain (.com)</td></tr>
-			  <tr class="light1"><td class="icon_cell"><img class="icons_small" src="icons/png/responsive.png"></td><td class="text_cell">Customized order email</td></tr>
+			  <tr><td class="icon_cell"><img class="icons_small" src="icons/png/domain1.png"></td><td class="text_cell">Custom domain</td></tr>
+			  <tr class="light1"><td class="icon_cell"><img class="icons_small" src="icons/png/reply3.png"></td><td class="text_cell">Customized order email</td></tr>
 			  <tr><td class="icon_cell"><img class="icons_small" src="icons/png/payment.png"></td><td class="text_cell">Alternative payment solutions</td></tr>
 			  <tr class="light1"><td class="icon_cell"><img class="icons_small" src="icons/png/tweet.png"></td><td class="text_cell">Twitter integration</td></tr>
 			</table>
@@ -90,7 +90,11 @@
 		<!--- Scripts -->
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
-	
+		<footer>
+		<a href="#">About</a>
+		<a href="#">Terms and conditions</a>
+		<a href="#">Contact</a>
+	</footer>
 </body>
 
 </html>
