Cleanliness + minor changes

--- a/index.html
+++ b/index.html
@@ -42,130 +42,130 @@
 		 	<h1><span class="blue_text">Designed and functioning store</span> <span class="grey_text">for less than $30</span></h1>
 		 </section>
 		 <section id="textbox_top_description" class="section">
-		 <p style=><span class="grey_text">Want an easy way to set up a store...? </span><br><br>
+		 <p style=><span class="grey_text">Want an easy way to set up a store...? </span><br>
 		 	<span class="blue_text">How 'bout we do it for you instead? <br>
 		 		  Plus marketing.</span>
 		 </p>
 		 </section>
 		 
-		 <section class="section">
-		 	<div class="website_thumbnail">
-		 		<div id="website1">
-		 			<div class="black_opacity"></div>
-		 		</div></div>
-		 	<div class="website_thumbnail">
-		 		<div id="website2">
-		 			<div class="black_opacity"></div>
-		 		</div></div>
-		 	<div class="website_thumbnail">
-		 		<div id="website3">
-		 			<div class="black_opacity"></div>
-		 		</div></div>
-		 </section>
+			<section class="section">
+				<div class="website_thumbnail">
+					<div id="website1">
+						<div class="black_opacity"></div>
+					</div></div>
+				<div class="website_thumbnail">
+					<div id="website2">
+						<div class="black_opacity"></div>
+					</div></div>
+				<div class="website_thumbnail">
+					<div id="website3">
+						<div class="black_opacity"></div>
+					</div></div>
+			</section>
 		 
-		 <section id="we_do_everything" class="section_full_width">
-		 	We build the site<br>
-		 	We drive the traffic<br>
-		 	We handle the hosting<br>
-		 	We... do everything for you.<br>
-		 </section>
+			<section id="we_do_everything" class="section_full_width">
+				We build the site<br>
+				We drive the traffic<br>
+				We handle the hosting<br>
+				We... do everything for you.<br>
+			</section>
 
-		 <!--- Icon boxes -->
-		 <section class="section">
-		 	<img class="icons" src="icons/png/design.png"><br>
-		 	<h4>Custom designed webstore</h4>
-		 	<p>We will set up and design a custom webstore with the color scheme of your choice.</p>	
-		 </section>
-		 <section class="section">
-		 	<img class="icons" src="icons/png/responsive.png"><br>
-		 	<h4>Mobile and tablet optimized</h4>
-		 	<p>The store will be optimized for computer,<br> tablet and smartphone.</p>	
-		 </section>
-		 <section class="section">
-		 	<img class="icons" src="icons/png/payment.png"><br>
-		 	<h4>Managed payment solution</h4>
-		 	<p>We'll deliver the store with a fully functioning shopping cart and payment solution.</p>	
-		 </section>
-		 <section class="section">
-		 	<img class="icons" src="icons/png/online6.png"><br>
-		 	<h4>Free web hosting</h4>
-		 	<p>You don't have to worry about the hosting.<br> We'll take care of it for you.</p>	
-		 </section>
-		 <section class="section">
-		 	<img class="icons" src="icons/png/like3.png"><br>
-		 	<h4>Custom Facebook page</h4>
-		 	<p>We will design a custom Facebook page<br> including cover photo and profile picture.</p>	
-		 </section>
-		 <section class="section">
-		 	<img id="icon_geo" src="icons/png/geo.png"><br>
-		 	<h4>Laser focused marketing</h4>
-		 	<p>We will craft a compelling Facebook ad<br> to drive visitors to your site.</p>	
-		 </section>
+			<!--- Icon boxes -->
+			<section class="section">
+				<img class="icons" src="icons/png/design.png"><br>
+				<h4>Custom designed webstore</h4>
+				<p>We will set up and design a custom webstore with the color scheme of your choice.</p>	
+			</section>
+			<section class="section">
+				<img class="icons" src="icons/png/responsive.png"><br>
+				<h4>Mobile and tablet optimized</h4>
+				<p>The store will be optimized for computer,<br> tablet and smartphone.</p>	
+			</section>
+			<section class="section">
+				<img class="icons" src="icons/png/payment.png"><br>
+				<h4>Managed payment solution</h4>
+				<p>We'll deliver the store with a fully functioning shopping cart and payment solution.</p>	
+			</section>
+			<section class="section">
+				<img class="icons" src="icons/png/online6.png"><br>
+				<h4>Free web hosting</h4>
+				<p>You don't have to worry about the hosting.<br> We'll take care of it for you.</p>	
+			</section>
+			<section class="section">
+				<img class="icons" src="icons/png/like3.png"><br>
+				<h4>Custom Facebook page</h4>
+				<p>We will design a custom Facebook page<br> including cover photo and profile picture.</p>	
+			</section>
+			<section class="section">
+				<img id="icon_geo" src="icons/png/geo.png"><br>
+				<h4>Laser focused marketing</h4>
+				<p>We will craft a compelling Facebook ad<br> to drive visitors to your site.</p>	
+			</section>
 
 
-		 <!--- iMac img -->
-		 <section class="section_small">
-		 	<img src="http://s21.postimg.org/k3jk143lj/imac_cartoon.png">
-		 </section>
+			<!--- iMac img -->
+			<section class="section_small">
+				<img src="http://s21.postimg.org/k3jk143lj/imac_cartoon.png">
+			</section>
 
-		 <!--- Info boxes -->
-		 <section>
-		 	<div id="box_website" class="box">
-		 		<div id="black_opacity_filter" class="opacity_filter">
-		 			<div class="box_header"><h3>Responsive website</h3></div>
-		 			<div class="box_textbox">
-		 				<ul>
-		 					<li>Bullet 1</li>
-		 					<li>Bullet 2</li>
-		 					<li>Bullet 3</li>
-		 				</ul>
-		 			</div>
-		 		</div>
-		 	</div>
-		 	<div id="box_facebook" class="box">
-		 		<div id="blue_opacity_filter" class="opacity_filter">
-		 			<div class="box_header"><h3>Facebook page</h3></div>
-		 			<div class="box_textbox">
-		 				<ul>
-		 					<li>Bullet 1</li>
-		 					<li>Bullet 2</li>
-		 					<li>Bullet 3</li>
-		 				</ul>
-		 			</div>
-		 		</div>
-		 	</div>
-		 	<div id="box_facebook_ad" class="box">
-		 		<div id="white_opacity_filter" class="opacity_filter">
-		 			<div class="box_header"><h3>Facebook ad</h3></div>
-		 			<div class="box_textbox">
-		 				<ul>
-		 					<li>Bullet 1</li>
-		 					<li>Bullet 2</li>
-		 					<li>Bullet 3</li>
-		 				</ul>
-		 			</div>
-		 		</div>
-		 	</div>
-		 </section>
+			<!--- Info boxes -->
+			<section>
+				<div id="box_website" class="box">
+					<div id="black_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h3>Responsive website</h3></div>
+						<div class="box_textbox">
+							<ul>
+								<li>Bullet 1</li>
+								<li>Bullet 2</li>
+								<li>Bullet 3</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box_facebook" class="box">
+					<div id="blue_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h3>Facebook page</h3></div>
+						<div class="box_textbox">
+							<ul>
+								<li>Bullet 1</li>
+								<li>Bullet 2</li>
+								<li>Bullet 3</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box_facebook_ad" class="box">
+					<div id="white_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h3>Facebook ad</h3></div>
+						<div class="box_textbox">
+							<ul>
+								<li>Bullet 1</li>
+								<li>Bullet 2</li>
+								<li>Bullet 3</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
 
-		 <!--- Pricing section -->
-		 <section class="section">
-		 <p style="text-align: center"><span class="grey_text">So how much is this gonna cost you...? </span><br><br>
-		 <button class="button medium_button blue_button">Pricing</button>
-		 </section>
+			<!--- Pricing section -->
+			<section class="section">
+			<p style="text-align: center"><span class="grey_text">So how much is this gonna cost you...? </span><br><br>
+			<button class="button medium_button blue_button">Pricing</button>
+			</section>
 
 
 		 <!--- Body END -->
 
 		<!--- Scripts -->
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
 
-	<footer>
-		<a href="#">About</a>
-		<a href="#">Terms and conditions</a>
-		<a href="#">Contact</a>
-	</footer>
+		<footer>
+			<a href="#">About</a>
+			<a href="#">Terms and conditions</a>
+			<a href="#">Contact</a>
+		</footer>
 </body>
 
 </html>
