Set up framework with copy for About

--- a/about.html
+++ b/about.html
@@ -6,9 +6,11 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		
 		<!--- jQuery -->
+
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
 		<!--- CSS FILES -->
+
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -18,13 +20,15 @@
 	<body>
 
 		<!--- Navigation -->
+
 		<div id="nav">
-			<div id="new_logo">Logotype</div>
-			<button class="button green_button" id="nav_button">Let's go!</button>
+			<div id="logo">Logotype</div>
+			<button class="button small_button green_button" id="nav_button">Let's go!</button>
 		</div>
 		
 		
 		<!--- Header -->
+
 		<div class="header">
 			<div id="header_textbox">
 				<p id="header_textbox_text"> 
@@ -35,7 +39,7 @@
 			</div>
 		</div>
 
-		<!--- Body -->
+		<!--- Body START -->
 
 		<section class="section">
 			<h3>What is COMPANY NAME?</h3>
@@ -79,7 +83,10 @@
 			<a href="#">Contact</a>
 		</footer>
 
+		<!--- Body END -->
+
 		<!--- Scripts -->
+
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
 		
