Changed button color and copy around pricing

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 						We drive the traffic<br>
 						We handle the hosting<br><br>
 						We... do it all for you.</h2>
+						<button class="button large_button orange_button">How does it work?</button>
 					</div>
 				</div>
 				
@@ -127,7 +128,7 @@
 			<section class="section">
 				<img id="icon_geo" src="icons/png/geo.png"><br>
 				<h4>Laser focused marketing</h4>
-				<p>We will craft a compelling Facebook ad<br> to drive visitors to your site.</p>	
+				<p>We will craft a compelling Facebook ad<br> to drive potential customers to your site.</p>	
 			</section>
 
 
@@ -180,8 +181,8 @@
 			<!--- Pricing section -->
 
 			<section class="section">
-			<p style="text-align: center"><span class="grey_text">So how much is this gonna cost you...? </span><br><br>
-			<button class="button medium_button blue_button">Pricing</button>
+			<p style="text-align: center"><span class="grey_text">So how much is this gonna cost you? </span><br><br>
+			<button class="button large_button blue_button">View Pricing</button>
 			</section>
 
 
