Changed some copy, added button and adjusted structure

--- a/thankyou.html
+++ b/thankyou.html
@@ -31,16 +31,14 @@
 
 		<section class="section">
 			<h2>Thank you best customer!</h2>
-			<p>We are truly grateful for your purchase<br>
-				and we promise we will do everything we can<br>
-				to make you satisfied!
-			</p>
 
-			<p>You will recieve an email with instructions how to proceed from here. So keep an eye on your inbox and we'll take it from there.
+			<p>As soon as you provide us with the necessary information about your business and your site, we will start setting it up.
 			</p><br>
 
+			<button class="button large_button orange_button" style="margin-bottom: 20px;">Download form here</button>
 
-			<p>You'll soon have your store up and running and the first potential customers will be dropping in shortly.</p>
+
+			<p>This form will also be emailed to you.</p>
 		</section>
 
 
