--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 		<!--- CSS FILES -->
 
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<link rel="stylesheet" type="text/css" href="css/responsive.css">
+		<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 
 	</head>
 	
@@ -145,9 +145,12 @@
 						<div class="box_header"><h2>Responsive website</h2></div>
 						<div class="box_textbox">
 							<ul>
-								<li>Bullet 1</li>
-								<li>Bullet 2</li>
-								<li>Bullet 3</li>
+								<li>Designed webstore</li>
+								<li>Mobile/tablet optimized</li>
+								<li>Payment solution</li>
+								<li>Hosting</li>
+								<li>About us page</li>
+								<li>Contact link to email</li>
 							</ul>
 						</div>
 					</div>
@@ -157,9 +160,11 @@
 						<div class="box_header"><h2>Facebook page</h2></div>
 						<div class="box_textbox">
 							<ul>
-								<li>Bullet 1</li>
-								<li>Bullet 2</li>
-								<li>Bullet 3</li>
+								<li>Facebook business page</li>
+								<li>Designed cover photo</li>
+								<li>Custom profile picture</li>
+								<li>Business description</li>
+								<li>Connection to webstore</li>
 							</ul>
 						</div>
 					</div>
@@ -169,9 +174,10 @@
 						<div class="box_header"><h2>Facebook ad</h2></div>
 						<div class="box_textbox">
 							<ul>
-								<li>Bullet 1</li>
-								<li>Bullet 2</li>
-								<li>Bullet 3</li>
+								<li>Compelling Facebook ad</li>
+								<li>Custom crafted copy</li>
+								<li>Appealing ad image</li>
+								<li>Laser targeted audience</li>
 							</ul>
 						</div>
 					</div>
