--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
 
 		<!--- CSS FILES -->
 
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<link rel="stylesheet" type="text/css" href="css/responsive.css">
+		<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 
 	</head>
 	
@@ -72,6 +72,9 @@
 			The company is staged in Stockholm, Sweden but have customers from all over the world.<br><br>
 
 			If you wanna get in touch with us, don’t hesitate to hit us up!</p>
+		</section>
+		<section class="section">
+			<button class="button large_button orange_button">How does it work?</button>
 		</section>
 
 
