Adjusted thumb symbol to fit all resolutions

--- a/thankyou.html
+++ b/thankyou.html
@@ -9,9 +9,9 @@
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
 		<!--- CSS FILES -->
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<link rel="stylesheet" type="text/css" href="CSS/normalize.css">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<link rel="stylesheet" type="text/css" href="css/responsive.css">
+		<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 
 	</head>
 	
@@ -25,7 +25,7 @@
 
 		<!--- Body START -->
 
-		<section class="section" style="padding-top: 50px;">
+		<section class="section" style="padding-top: 100px;">
 			<img class="icons_large" src="icons/png/like3.png"><br>
 		</section>
 
