Added 3 image boxes below header

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 
 		<!--- Body START -->
 
+		<section class="section_full_width">
+			<div class="div_full_width" id="select_your_template"></div>
+			<div class="div_full_width" id="tell_us_about_business"></div>
+			<div class="div_full_width" id="customers"></div>
+		</section>
+
 		<section class="section_full_width section_top">
 			<div id="top_textbox">
 			 	<h1><span class="blue_text">
