Created three step boxes with images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		
 		<!--- jQuery -->
 
-		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 		<!--- CSS FILES -->
 
@@ -40,10 +40,18 @@
 
 		<!--- Body START -->
 
+			<!--- Three Step Model -->
+
 		<section class="section_full_width">
-			<div class="div_full_width" id="select_your_template"></div>
-			<div class="div_full_width" id="tell_us_about_business"></div>
-			<div class="div_full_width" id="customers"></div>
+			<div class="div_top_image" id="select_your_template">
+				<div class="div_top_image_textbox">Select a template</div>
+			</div>
+			<div class="div_top_image" id="tell_us_about_business">
+				<div class="div_top_image_textbox">Tell us about your business</div>
+			</div>
+			<div class="div_top_image" id="customers">
+				<div class="div_top_image_textbox">Visitors start dropping in</div>
+			</div>
 		</section>
 
 		<section class="section_full_width section_top">
@@ -62,7 +70,9 @@
 			 	</p>
 			</div>
 		</section>
-		 
+
+			<!--- Template selection -->
+
 			<section class="section_full_width">
 				<h2>Just select a template</h2>
 					<div class="template" id="template1">
