Working mainly on header and three step model pictures

--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
 					All you need,<br>
 					is a product.
 				</div>
+				<div id="header_textbox_subtext">
+				What if you had a friend that could help you set up a webstore, a Facebook page and bring potential customers to your site?<br><br>
+				AnyWebstore is that friend.
+				<br><br>
+				<button class="button large_button orange_button">How does it work?</button>
+				</div>
 			</div>
 		</div>
 
 		<!--- Body START -->
 
 			<!--- Three Step Model -->
+		<section class="section_full_width section_top">
+			<div id="top_textbox">
+			 	<h1><span class="blue_text">
+			 		You don't have to know ecommerce or marketing.</span><br> <span class="grey_text">All you need is something to sell.</span></h1>
+			</div>	
+		</section>
 
 		<section class="section_full_width">
 			<div class="div_top_image" id="select_your_template">
@@ -50,24 +62,7 @@
 				<div class="div_top_image_textbox">Tell us about your business</div>
 			</div>
 			<div class="div_top_image" id="customers">
-				<div class="div_top_image_textbox">Visitors start dropping in</div>
-			</div>
-		</section>
-
-		<section class="section_full_width section_top">
-			<div id="top_textbox">
-			 	<h1><span class="blue_text">
-			 		Fully functioning 
-			 		webstore</span> <span class="grey_text">for less than $30</span></h1>
-			</div>	
-			 	
-			<div id="top_textbox_subtext">
-			 	<p style=>
-			 		<span class="grey_text">
-				 		Looking for an easy way to set up a store...? 
-				 	</span><br>
-			 		<span class="blue_text">How 'bout we do it for you instead? <br>Plus marketing.</span>
-			 	</p>
+				<div class="div_top_image_textbox">We get you off the ground</div>
 			</div>
 		</section>
 
