Small changes like top textbox

--- a/service.html
+++ b/service.html
@@ -32,8 +32,8 @@
 		<div class="header">
 			<div id="header_textbox">
 				<p id="header_textbox_text"> 
-					Don't hire<br>
-					a deveveloper<br>
+					Don't hire a<br>
+					deveveloper<br>
 					for $3000</p>
 			</div>
 		</div>
